# -auto_backup_rs_egui

./: Cargo.toml  README.md
src/: logic.rs  main.rs  ui.rs
