[package]
name = "auto_backup_rs_egui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.27", features = ["glow", "default_fonts"] }
egui_extras = "0.27"
rfd = "0.14"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
anyhow = "1.0"
thiserror = "1.0"
dirs-next = "2"
